When moving a virtual server, update the paths in the script logs DB to match the new location.
Backups and restores made by domain owners are now included in their bandwidth usage.
Added Module Config options to limit the number of concurrent backups, which defaults to 3. This prevents system owners from overloading the machine with their scheduled backups.
If Apache supports SNI, make the warning about clashing certs less dramatic.
When a mailbox user is created, make his spam, virus and trash directories under Maildir so that they show up in the IMAP folder list by default.
Backups and restores to and from S3 sub-directories are now supported.
---- Changes since 3.76 ----
Updated the Plans script installer to version 8.1.10, Dolibarr to 2.7.1, LimeSurvey to 1.87, DokuWiki to 2009-12-25c, OpenX to 2.8.3, phpMyFAQ to 2.5.7, WordPress and WordPress MU to 2.9.1.1, SimpleInvoices to 2010.1, Movable Type to 5.01, phpMyAdmin to 3.2.5, Typo3 to 4.3.1, TikiWiki to 3.4, Zikula to 1.2.1, and ZenPhoto to 1.2.8.
Fixed the backup and restore for alias websites, which were previously not always restored correctly.
Changed statistics graphs to show load average in the regular scale, instead of converted to a percentage.
Added --autoreply-start, --autoreply-end and --autoreply-period flags to the modify-user API command, for changing other autoresponder settings.
Added a Module Config option under Defaults for new domains to set the characters which random passwords are made up of.
Added buttons to enable or disable multiple resellers at once.
The MySQL default collation order for new databases can now be set on the database creation form, and in the MySQL section of a server template.
Added the Website Redirects page, for easily creating aliases from URL paths to directories, and redirects from URL paths to other websites.
Added a 'status' section to the 'info' API command, to get the collected status of servers like Apache and BIND.