@@ -1208,3 +1208,4 @@ Added buttons to enable or disable multiple resellers at once.
 The MySQL default collation order for new databases can now be set on the database creation form, and in the MySQL section of a server template.
 Added the Website Redirects page, for easily creating aliases from URL paths to directories, and redirects from URL paths to other websites.
 Added a 'status' section to the 'info' API command, to get the collected status of servers like Apache and BIND.
+When lowering a virtual server's disk quota below the current usage a warning is displayed asking the user if he really wants to do that.
